Reworked GaussianBlur to use convolution with a kernel. Is much faster now.

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
                             <excludes>
                                 <exclude>LICENSE</exclude>
                                 <exclude>README.md</exclude>
+                                <ecxlude>**/*.serialized</ecxlude>
                             </excludes>
                         </configuration>
                     </execution>
